--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.14.2",
     "@antfu/ni": "^0.12.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.7",
     "bumpp": "^7.1.1",
     "eslint": "^8.6.0",
@@ -48,5 +49,9 @@
     "unbuild": "^0.6.7",
     "vite": "^2.7.10",
     "vitest": "^0.0.129"
+  },
+  "dependencies": {
+    "express": "^4.17.3",
+    "swagger-ui-express": "^4.3.0"
   }
 }
