--- a/package.json
+++ b/package.json
@@ -40,18 +40,25 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.14.2",
     "@antfu/ni": "^0.12.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.7",
     "bumpp": "^7.1.1",
     "eslint": "^8.6.0",
     "esno": "^0.13.0",
+    "nodemon": "^2.0.15",
     "typescript": "^4.5.4",
     "unbuild": "^0.6.7",
     "vite": "^2.7.10",
     "vitest": "^0.0.129"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.3",
     "swagger-ui-express": "^4.3.0"
   }
 }
