--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.7",
     "bumpp": "^7.1.1",
     "eslint": "^8.6.0",
@@ -59,6 +60,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
     "swagger-ui-express": "^4.3.0"
   }
 }
