--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4",
+    "socket.io": "^4.4.1",
     "swagger-ui-express": "^4.3.0"
   }
 }
