--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint": "eslint --ext .js,.ts .",
     "prepublishOnly": "nr build",
     "release": "bumpp --commit --push --tag && pnpm publish",
-    "start": "esno src/index.ts",
+    "start": "nodemon --exec esno src/index.ts",
     "test": "vitest"
   },
   "devDependencies": {
@@ -48,7 +48,7 @@
     "bumpp": "^7.1.1",
     "eslint": "^8.6.0",
     "esno": "^0.13.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.22",
     "typescript": "^4.5.4",
     "unbuild": "^0.6.7",
     "vite": "^2.7.10",
